cmake_minimum_required (VERSION 3.0.0)
project (przyklady)

add_executable(przyklad1 przyklad1/main.cpp)
add_executable(przyklad2 przyklad2/main.cpp)
add_executable(przyklad3 przyklad3/main.cpp)
add_executable(przyklad4 przyklad4/main.cpp)
add_executable(przyklad5 przyklad5/main.cpp)
add_executable(przyklad6 przyklad6/main.cpp)
add_executable(przyklad7 przyklad7/main.cpp)
add_executable(przyklad8 przyklad8/main.cpp)
add_executable(przyklad9 przyklad9/main.cpp)
add_executable(przyklad10 przyklad10/main.cpp)
add_executable(przyklad11 przyklad11/main.cpp)
add_executable(przyklad12 przyklad12/main.cpp)
add_executable(przyklad13 przyklad13/main.cpp)
add_executable(przyklad14 przyklad14/main.cpp)
add_compile_options( -Wall -g )
set(CMAKE_CXX_FLAGS "-std=c++17 -ltbb") 
